--- a/index.css
+++ b/index.css
@@ -1,1 +1,38 @@
+/* Import */
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700&display=swap');
+
+
+/* Global */
+:root {
+  /* Color */
+  --color-white: #fff;
+  --color-light-white: #eee;
+  --color-dark-white: #bdbdbd;
+  --color-grey: #777777;
+  --color-dark-grey: #404040;
+  --color-black: #000;
+
+  /* Font Size */
+  --font-large: 48px;
+  --font-medium: 28px;
+  --font-regular: 18px;
+  --font-small: 16px;
+  --font-micro: 14px;
+
+  /* Font weight */
+  --fweight-bold: 700;
+  --fweight-semi-bold: 600;
+  --fweight-semi-semi-bold: 500;
+  --fweight-regular: 400;
+  --fweight-semi-regular: 300;
+  --fweight-thin: 200;
+  --fweight-very-thin: 100;
+
+  /* Size */
+}
+
+/* Universal tags */
+* {
+  box-sizing: borderbox;
+  font-family: 'Gothic A1', sans-serif;
+}
