--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-light-white);
+  background: var(--color-light-gwhite);
 }
 .navbar__logo > a {
   font-size: var(--font-regular);
