--- a/index.css
+++ b/index.css
@@ -11,10 +11,12 @@
   --color-grey: #777777;
   --color-dark-grey: #404040;
   --color-black: #000;
+  --color-background: rgb(242 242 240);
 
   /* Font Size */
   --font-large: 48px;
   --font-medium: 28px;
+  --font-middle: 20px;
   --font-regular: 16px;
   --font-small: 14px;
   --font-micro: 12px;
@@ -30,6 +32,9 @@
 
   /* Size */
   --size-border-radius: 15px;
+
+  /* Animation */ 
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -49,6 +54,12 @@ ul {
   list-style: none;
   padding-left: 0;
 }
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
 
 /* Typography */
 h1 {
@@ -64,10 +75,16 @@ h2 {
   margin: 8px 0;
 }
 h3 {
-  font-size: var(--font-regular);
+  font-size: var(--font-middle);
+  font-weight: var(--fweight-semi-bold);
+  color: var(--color-black);
+  margin: 40px 0 16px;
+}
+h4 {
+  font-size: var(--font-middle);
   font-weight: var(--fweight-light);
   color: var(--color-black);
-  margin: 8px 0;
+  margin: 10px 0 16px;
 }
 p {
   font-size: var(--font-regular);
@@ -99,9 +116,136 @@ p {
   border-radius: var(--size-border-radius);
 }
 .navbar__menu__item.active {
-  border: 1.6px solid var(--color-white);
-  font-weight: var(--fweight-semi-bold);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .navbar__menu__item:hover{
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* Home */
+#home {
+  padding: 40px;
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+.home__contact {
+  font-size: var(--font-regular);
+  font-weight: var(--fweight-extra-light);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-light-white);
+  border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section {
+  padding: 50px;
+  max-width: 1200px;
+  text-align: justify;
+  margin: auto;
+}
+/* .section__container{
+  max-width: 1200px;
+  margin: 0 auto;
+} */
+
+/* About */
+.school,
+.experience {
+  display: flex;
+}
+.about__logo {
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+.about__period {
+  font-size: var(--font-small);
+}
+
+/* Skills */
+.skillset {
+  display: flex;
+  border: 2px solid var(--color-light-white);
+  border-radius: var(--size-border-radius);
+  padding: 20px;
+  margin-top: 40px;
+}
+.skillset__left {
+  flex-basis: 60%;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 0 40px 0 20px;
+}
+.skillset__right {
+  flex-basis: 40%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+.skill__description,
+.tools__list > li,
+.etc__list > li{
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.skillset i {
+  font-size: 22px;
+  display: inline-block;
+  width: 30px;
+}
+.skill__description > span,
+.tools__list span,
+.etc__list span{
+  font-weight: var(--fweight-thin);
+  font-size: var(--font-regular);
+}
+.skill__bar {
+  width: 95%;
+  height: 10px;
+  background-color: rgb(240, 240, 240);
+  margin-bottom: 14px;
+  border-radius: var(--size-border-radius);
+}
+.skill__value {
+  height: 10px;
+  background-color: rgb(218, 231, 255);
+  border-radius: var(--size-border-radius);
+}
+.etc {
+  margin-top: 20px;
+}
+.fa-html5 {
+  color: rgb(211, 70, 0);
+}
+.fa-css3-alt {
+  color:rgb(0, 126, 185)
+}
+.fa-js {
+  color: rgb(248, 216, 8);
+}
+.fa-paintbrush {
+  color: rgb(112 126 255);
+}
+.fa-figma {
+  color:rgb(0, 174, 201);
+}
+.fa-square-github {
+  color: #444;
+}
+.skill__description,
+.tools__list > li,
+.etc__list{
+  width: fit-content;
+  transition: all 300ms ease;
+}
+.skill__description:hover i,
+.tools__list > li:hover i,
+.etc__list:hover i {
+  transform: rotate(-15deg) scale(1.2);
 }
