--- a/index.css
+++ b/index.css
@@ -100,6 +100,17 @@ p {
   align-items: center;
   background: var(--color-light-white);
 }
+.navbar__logo {
+  display: flex;
+  align-items: center;
+}
+.navbar__logo > img {
+  width: 23px;
+  height: 23px;
+  background-color: var(--color-white);
+  border-radius: 40%;
+  margin: 0 10px;
+}
 .navbar__logo > a {
   font-size: var(--font-regular);
   font-weight: var(--fweight-thin);
@@ -138,7 +149,29 @@ p {
   margin: 24px;
   padding: 8px 12px;
   border: 2px solid var(--color-light-white);
+  border-radius: var(--size-border-radius); 
+  position: relative;
+}
+.home__contact::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
   border-radius: var(--size-border-radius);
+  background-color: transparent;
+  transition: all 250ms ease-in-out;
+}
+.home__contact:hover {
+  color: var(--color-white);
+  transition: all 250ms ease-in-out;
+}
+.home__contact:hover::after {
+  background-color: rgb(0, 0, 0);
+  z-index: -1;
+  transition: all 250ms ease-in-out;
 }
 
 /* Section common */
@@ -201,9 +234,13 @@ p {
 }
 .skill__description > span,
 .tools__list span,
-.etc__list span{
+.etc__list span,
+.skill__certificate{
   font-weight: var(--fweight-thin);
   font-size: var(--font-regular);
+}
+.skill:last-child {
+  margin-bottom: 10px;
 }
 .skill__bar {
   width: 95%;
@@ -248,4 +285,16 @@ p {
 .tools__list > li:hover i,
 .etc__list:hover i {
   transform: rotate(-15deg) scale(1.2);
+}
+
+/* Work */
+.work__categories {
+  margin: 40px 0;
+}
+.category__btn {
+  border: 1px solid var(--color-light-white);
+  border-radius: 10px;
+  padding: 8px 25px;
+  font-size: var(--font-regular);
+  font-weight: var(--fweight-thin);
 }
