--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 /* Import */
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700&display=swap');
 
-
 /* Global */
 :root {
   /* Color */
@@ -99,6 +98,7 @@ p {
   justify-content: space-between;
   align-items: center;
   background: var(--color-light-white);
+  position: relative;
 }
 .navbar__logo {
   display: flex;
@@ -131,6 +131,15 @@ p {
 }
 .navbar__menu__item:hover{
   background-color: rgba(255, 255, 255, 0.5);
+}
+.navbar__toggle-btn > i {
+  font-size: var(--font-regular);
+  color: var(--color-dark-grey);
+}
+.navbar__toggle-btn {
+  position: absolute;
+  right: 10px;
+  display: none;
 }
 
 /* Home */
@@ -239,6 +248,9 @@ p {
   font-weight: var(--fweight-thin);
   font-size: var(--font-regular);
 }
+.skill__certificate {
+  font-size: var(--font-small);
+}
 .skill:last-child {
   margin-bottom: 10px;
 }
@@ -289,12 +301,161 @@ p {
 
 /* Work */
 .work__categories {
-  margin: 40px 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
 }
 .category__btn {
   border: 1px solid var(--color-light-white);
   border-radius: 10px;
-  padding: 8px 25px;
+  padding: 8px 25px 8px 35px;
   font-size: var(--font-regular);
   font-weight: var(--fweight-thin);
+  margin: 10px 10px 10px 0;
+}
+.category__count {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  line-height: 20px;
+  background: rgb(255, 181, 43);
+  border-radius: 50%;
+  color: var(--color-white);
+  font-size: var(--font-small);
+  position: relative;
+  top: -20px;
+  left: 4px;
+  transition: all var(--animation-duration) ease-in;
+  opacity: 0;
+}
+.category__btn.active,
+.category__btn:hover {
+  background-color: rgb(251, 251, 251);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+.work__projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+.project {
+  width: 260px;
+  height: 230px;
+  margin: 5px;
+  background-color: var(--color-light-white);
+  position: relative;
+}
+.project__img {
+  max-width: 100%;
+  max-height: 100%; 
+}
+.project__description {
+  background-color: rgba(0,0,0,.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+.project:hover .project__description {
+  transform: translateY(0);
+  opacity: 0.8;
+}
+.project__description h3,
+.project__description span {
+  color: var(--color-white);
+  margin: 0 0 5px 0;
+}
+.project__description h3::after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 43%;
+  margin: 10px 0;
+  width: 10px;
+  height: 1px;
+  background-color: var(--color-white);
+}
+
+/* Contact */
+.contact__email{
+  margin: 20px 0;
+}
+.contact__links > a {
+  margin-right: 15px;
+}
+.contact__links > a > i {
+  font-size: var(--font-medium);
+  color: var(--color-grey);
+  transition: all 100ms ease-in;
+}
+.contact__links > a > i:hover {
+  color: rgb(167, 223, 255);
+  transform: scale(1.1);
+}
+.contact__right {
+  font-size: var(--font-small);
+  margin-top: 40px;
+}
+
+/* Responsive */
+/* For below 768px screen width*/
+@media screen and (max-width: 768px) {
+  /* Navbar */
+  .navbar__toggle-btn {
+    display: block;
+  }
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar__menu {
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    margin: 8px 0;
+    display: none;
+  }
+  .navbar__menu__item {
+    margin: 0 0 5px;
+  }
+  .navbar__logo,
+  .navbar__toggle-btn {
+    margin: 16px 0;
+  }
+
+  /* Work */
+  .work__categories {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 0 0 20px 0;
+  }
+  .category__btn {
+    margin: 5px;
+  }
+  .work__projects {
+    flex-direction: column;
+    align-items: center;
+  }
+  .project {
+    margin-bottom: 10px;
+  }
+
+  /* Contact */
+  .contact__container {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+  }
 }
