--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ p {
   background-color: rgba(255, 255, 255, 0.5);
 }
 .navbar__toggle-btn > i {
-  font-size: var(--font-regular);
+  font-size: var(--font-middle);
   color: var(--color-dark-grey);
 }
 .navbar__toggle-btn {
@@ -434,6 +434,19 @@ p {
     margin: 16px 0;
   }
 
+  /* Skill */
+  .skillset {
+    flex-direction: column;
+  }
+  .skillset__left {
+    flex-basis: 100%;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  .skillset__right {
+    flex-basis: 100%;
+  }
+
   /* Work */
   .work__categories {
     display: flex;
@@ -444,12 +457,9 @@ p {
   .category__btn {
     margin: 5px;
   }
-  .work__projects {
-    flex-direction: column;
-    align-items: center;
-  }
   .project {
     margin-bottom: 10px;
+    flex-grow: 1;
   }
 
   /* Contact */
