--- a/index.css
+++ b/index.css
@@ -94,11 +94,18 @@ p {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-light-white);
-  position: relative;
+  background: transparent;
+  padding: 10px;
+  transition: all var(--animation-duration) ease-in-out;
+}
+#navbar.navbar--dark {
+  background-color: var(--color-light-white);
+  padding: 5px;
 }
 .navbar__logo {
   display: flex;
@@ -127,10 +134,10 @@ p {
   border-radius: var(--size-border-radius);
 }
 .navbar__menu__item.active {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #f8f8f8;
 }
 .navbar__menu__item:hover{
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #f8f8f8;
 }
 .navbar__toggle-btn > i {
   font-size: var(--font-middle);
@@ -145,6 +152,7 @@ p {
 /* Home */
 #home {
   padding: 40px;
+  padding-top: 100px;
   text-align: center;
 }
 .home__avatar {
