--- a/index.css
+++ b/index.css
@@ -416,6 +416,32 @@ p {
   margin-top: 40px;
 }
 
+/* Arrow up */
+.arrow-up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  font-size: 30px;
+  width: 40px;
+  height: 40px;
+  background-color: var(--color-dark-white);
+  color: var(--color-white);
+  border-radius: 50%;
+  transition: all var(--animation-duration) ease;
+  opacity: 0;
+  pointer-events: none;
+}
+.arrow-up:hover {
+  background-color: var(--color-dark-grey);
+}
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 /* Responsive */
 /* For below 768px screen width*/
 @media screen and (max-width: 768px) {
