--- a/index.css
+++ b/index.css
@@ -348,17 +348,41 @@ p {
 .work__projects {
   display: flex;
   flex-wrap: wrap;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+.work__projects.anima-out {
+  opacity : 0;
+  transform: scale(0.98) translateY(40px);
+
 }
 .project {
+  display: block;
   width: 260px;
   height: 230px;
   margin: 5px;
   background-color: var(--color-light-white);
   position: relative;
 }
+.project.invisible {
+  display: none;
+}
 .project__img {
+  height: 100%;
   max-width: 100%;
   max-height: 100%; 
+}
+.jjangGame{
+  background: url(./imgs/jjangGame.png) center center no-repeat;
+  background-size: cover;
+}
+.todoList {
+  background: url(./imgs/todolist.png) center 0 no-repeat;
+  background-size: cover;
+}
+.shoppingList {
+  background: url(./imgs/shoppinglist.png) 50% 0 no-repeat;
+  background-size: cover;
 }
 .project__description {
   background-color: rgba(0,0,0,.8);
@@ -383,6 +407,7 @@ p {
 .project__description span {
   color: var(--color-white);
   margin: 0 0 5px 0;
+  font-weight: var(--fweight-semi-bold);
 }
 .project__description h3::after {
   content: "";
