--- a/index.css
+++ b/index.css
@@ -133,9 +133,7 @@ p {
   cursor: pointer;
   border-radius: var(--size-border-radius);
 }
-.navbar__menu__item.active {
-  background-color: #f8f8f8;
-}
+
 .navbar__menu__item:hover{
   background-color: #f8f8f8;
 }
@@ -336,11 +334,11 @@ p {
   transition: all var(--animation-duration) ease-in;
   opacity: 0;
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: rgb(251, 251, 251);
 }
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
