--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 :root {
   /* Color */
   --color-white: #fff;
+  --color-yellow: rgb(255, 181, 43);
   --color-light-white: #eee;
   --color-dark-white: #bdbdbd;
   --color-grey: #777777;
@@ -105,7 +106,6 @@ p {
 }
 #navbar.navbar--dark {
   background-color: var(--color-light-white);
-  padding: 1px;
 }
 .navbar__logo {
   display: flex;
@@ -324,7 +324,7 @@ p {
   width: 18px;
   height: 18px;
   line-height: 20px;
-  background: rgb(255, 181, 43);
+  background: var(--color-yellow);
   border-radius: 50%;
   color: var(--color-white);
   font-size: var(--font-small);
@@ -407,13 +407,17 @@ p {
   margin: 0 0 5px 0;
   font-weight: var(--fweight-semi-bold);
 }
+.project__description h3 {
+  color: var(--color-yellow);
+}
 .project__description h3::after {
   content: "";
   display: block;
   position: relative;
-  left: 43%;
-  margin: 10px 0;
-  width: 10px;
+  left: 50%;
+  margin: 15px 0;
+  transform: translateX(-50%);
+  width: 50px;
   height: 1px;
   background-color: var(--color-white);
 }
@@ -475,13 +479,18 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-light-white);
   }
   .navbar__menu {
     flex-direction: column;
     width: 100%;
     text-align: center;
-    margin: 8px 0;
+    margin: 6px 0;
     display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
   }
   .navbar__menu__item {
     margin: 0 0 5px;
