--- a/index.css
+++ b/index.css
@@ -378,8 +378,12 @@ p {
   max-width: 100%;
   max-height: 100%; 
 }
-.webpage {
+.webpage-busan {
   background: url(./imgs/webpage.png) 50% 50% no-repeat;
+  background-size: cover;
+}
+.webpage-hilton {
+  background: url(./imgs/webpage-hilton.jpg) center center no-repeat;
   background-size: cover;
 }
 .jjangGame{
