--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
   /* Size */
   --size-border-radius: 15px;
 
-  /* Animation */ 
+  /* Animation */
   --animation-duration: 300ms;
 }
 
@@ -135,11 +135,11 @@ p {
   cursor: pointer;
   border-radius: var(--size-border-radius);
 }
-.navbar__menu__item.active{
+.navbar__menu__item.active {
   background-color: #f8f8f8;
 }
 
-.navbar__menu__item:hover{
+.navbar__menu__item:hover {
   background-color: #f8f8f8;
 }
 .navbar__toggle-btn > i {
@@ -169,7 +169,7 @@ p {
   margin: 24px;
   padding: 8px 12px;
   border: 2px solid var(--color-light-white);
-  border-radius: var(--size-border-radius); 
+  border-radius: var(--size-border-radius);
   position: relative;
 }
 .home__contact::after {
@@ -177,7 +177,7 @@ p {
   top: 0;
   left: 0;
   display: block;
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   border-radius: var(--size-border-radius);
@@ -242,7 +242,7 @@ p {
 }
 .skill__description,
 .tools__list > li,
-.etc__list > li{
+.etc__list > li {
   display: flex;
   align-items: center;
   margin-bottom: 16px;
@@ -255,7 +255,7 @@ p {
 .skill__description > span,
 .tools__list span,
 .etc__list span,
-.skill__certificate{
+.skill__certificate {
   font-weight: var(--fweight-thin);
   font-size: var(--font-regular);
 }
@@ -284,7 +284,7 @@ p {
   color: rgb(211, 70, 0);
 }
 .fa-css3-alt {
-  color:rgb(0, 126, 185)
+  color: rgb(0, 126, 185);
 }
 .fa-js {
   color: rgb(248, 216, 8);
@@ -292,21 +292,25 @@ p {
 .fa-react {
   color: #5ed4f2;
 }
+.fa-t {
+  color: rgb(0, 126, 185);
+}
 .fa-paintbrush {
   color: rgb(112 126 255);
 }
 .fa-figma {
-  color:rgb(0, 174, 201);
+  color: rgb(0, 174, 201);
 }
 .fa-square-github {
   color: #444;
 }
-.fa-n { color:rgb(0, 0, 0);
+.fa-n {
+  color: rgb(0, 0, 0);
 }
 
 .skill__description,
 .tools__list > li,
-.etc__list{
+.etc__list {
   width: fit-content;
   transition: all 300ms ease;
 }
@@ -361,9 +365,8 @@ p {
   transition: all var(--animation-duration) ease-out;
 }
 .work__projects.anima-out {
-  opacity : 0;
+  opacity: 0;
   transform: scale(0.98) translateY(40px);
-
 }
 .project {
   display: block;
@@ -379,7 +382,7 @@ p {
 .project__img {
   height: 100%;
   max-width: 100%;
-  max-height: 100%; 
+  max-height: 100%;
 }
 .webpage-busan {
   background: url(./imgs/webpage.png) 50% 50% no-repeat;
@@ -389,7 +392,7 @@ p {
   background: url(./imgs/webpage-hilton.jpg) center center no-repeat;
   background-size: cover;
 }
-.jjangGame{
+.jjangGame {
   background: url(./imgs/jjangGame.png) center center no-repeat;
   background-size: cover;
 }
@@ -401,13 +404,17 @@ p {
   background: url(./imgs/shoppinglist.png) 50% 0 no-repeat;
   background-size: cover;
 }
-
 .youtube {
   background: url(./imgs/youtube.png) 0 50% no-repeat;
   background-size: cover;
 }
+.webpage-teamProject {
+  background: url(./imgs/webpage-teamProject.png) center center no-repeat;
+  background-size: cover;
+}
+
 .project__description {
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
   top: 0;
   left: 0;
@@ -435,7 +442,7 @@ p {
   color: var(--color-yellow);
 }
 .project__description h3::after {
-  content: "";
+  content: '';
   display: block;
   position: relative;
   left: 50%;
@@ -447,7 +454,7 @@ p {
 }
 
 /* Contact */
-.contact__email{
+.contact__email {
   margin: 20px 0;
 }
 .contact__links > a {
@@ -496,15 +503,14 @@ p {
 /* Responsive */
 /* For below 768px screen width*/
 @media screen and (max-width: 768px) {
-
   :root {
-     /* Font Size */
-  --font-large: 30px;
-  --font-medium: 20px;
-  --font-middle: 18px;
-  --font-regular: 16px;
-  --font-small: 14px;
-  --font-micro: 12px;
+    /* Font Size */
+    --font-large: 30px;
+    --font-medium: 20px;
+    --font-middle: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
   }
   .section {
     padding: 20px;
